Fix spacing in pagination navigation

--- a/_src/_includes/css/style.css
+++ b/_src/_includes/css/style.css
@@ -803,13 +803,16 @@ label + .inline-field-control {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: -0.5em;
 }
 
 .posts-pagination .older-posts {
+  margin-bottom: 0.5em;
   margin-right: auto;
 }
 
 .posts-pagination .newer-posts {
+  margin-bottom: 0.5em;
   margin-left: auto;
 }
 
